--- a/web.config
+++ b/web.config
@@ -1,7 +1,19 @@
 <configuration>
     <system.webServer>
+        <rewrite>
+            <rules>
+                <rule name="Redirect to https">
+                    <match url="(.*)"/>
+                    <conditions>
+                        <add input="{HTTPS}" pattern="Off"/>
+                        <add input=”{REQUEST_METHOD}” pattern=”^get$|^head$” />
+                    </conditions>
+                    <action type="Redirect" url="https://{HTTP_HOST}/{R:1}"/>
+                </rule>
+            </rules>
+        </rewrite>
         <staticContent>
             <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
         </staticContent>
-     </system.webServer>
+    </system.webServer>
 </configuration>
